# eventbridge-api

./: .env-model  LICENSE  README.md  alembic.ini  config.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: health.py  router.py  test.py
app/api/v1/events/: routes.py
app/api/v1/execution/: routes.py
app/api/v1/webhooks/: schemas.py  stripe.py
app/core/: config.py
app/db/: database.py  deps.py  models.py
app/log/: logger_setup.py
app/services/: executor.py
app/services/notion/: executor_notion.py  notion_payments.py
app/support/: utils.py
migrations/: env.py
migrations/versions/: 19b05a1f35eb_create_events_and_executions_tables.py
