[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eventbridge-api"
author = "Luciano Nieto"
author-email = "luciano.nieto@gmail.com"
version = "0.1.0"
description = "Eventbridge API Service"
readme = "README.md"
license = {text = "MIT"}
keywords = ["eventbridge", "api", "notion", "stripe"]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]